fix: fix index.html

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
  <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8" >
   <title>HTML5</title>
  </head>
  <body>
-    CV#2. HTML, CSS & Git Basics
+    CV#2. HTML, CSS and Git Basics
  </body>
 </html>
