feat: create cv

--- a/index.html
+++ b/index.html
@@ -3,8 +3,60 @@
  <head>
   <meta charset="utf-8" >
   <title>HTML5</title>
+  <link rel="stylesheet" href="./style.css">
  </head>
  <body>
-    CV#2. HTML, CSS and Git Basics
+   <div class="main-page">
+      <div class="content-wrapper">
+         <header>
+            <h1>Antoshyna Alexandra</h1>
+            <img  src="./img/tulips1.jpg" alt="My Photo" width="150" height="180">
+         </header>
+            <h2>Contact information</h2>
+               <ul>
+                  <li>Phone: +37529-275-276-6</li>
+                  <li>E-mail: alisamirror2009@gmail.ru</li>
+                  <li>GitHub: @Alexandra1984</li>
+               </ul>
+               <main>
+                     <h2>About me</h2>
+                     <p> I have been working as a lecturer in the planetarium for 14 years.  <br>
+                     I like my job, but now I’m interested in IT. <br>
+                     My goal is to learn everything new and interesting.  <br>
+                     My strengths: sociability and responsibility. </p>
+               </main>
+               <h2>Skills</h2>
+                  <ul>
+                     <li>HTML</li>
+                     <li>CSS/SASS</li>
+                     <li>Git, GitHub</li>
+                     <li>JavaScript (Basic)</li>
+                  </ul>
+                  <h2>Courses</h2>
+                  <nav class="menu">
+                     <ol>
+                     <li><a href="https://belhard.academy/testing">Software testing</a></li>
+                     <li><a href="https://rs.school/js/">JavaScript/Front-end (basic)</a></li>                  
+                     </ol>
+                  </nav>
+                  <h2>Work Expirience</h2>                     
+                  <p> <a href="https://alexandra1984.github.io/rsschool-cv/cv">CV markdown</a> </p>
+                  <h2>Languages:</h2>
+                  <ul>
+                     <li>English - B1</li>
+                     <li>Russian - native</li>                     
+                  </ul>
+      </div>
+      <footer>
+         <a href="https://github.com/Alexandra1984">
+         <img  src="./img/github_2.png" alt="Github Icon" width="60" height="60">
+         <p>My GitHub</p>
+         </a>
+         <p class="footer-course-data">2022</p>
+         <a href="https://rs.school/js/">
+         <img src="./img/rs.jpg" alt="Rsschool Icon" width="190" height="100">
+         </a>
+      </footer>
+   </div>
  </body>
 </html>
